# microplex-sources

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
calibration/: __init__.py  constraints.py  loader.py  targets.py  variables.py
calibration/methods/: __init__.py  entropy.py
data/state/: irs_soi_by_state.csv
data/targets/: README.md  build_state_targets.py
db/: __init__.py  cli.py  etl_ons.py  etl_soi_credits.py  etl_soi_deductions.py  etl_soi_income_sources.py  etl_soi_state.py  supabase_client.py
docs/: architecture.md  calibration-pipeline.md  cps-variable-coverage.md
docs/data-sources/: irs-soi-state.md
micro/: AUTH.md
micro/us/: cosilico_runner.py  district.py  export_calibration_json.py  reforms.py  tax_unit_builder.py  validate_data_policy_separation.py
micro/us/census/: .gitignore  download_cps.py
micro/us/census/cps-asec/: ALM_VAL.yaml  A_CLSWKR.yaml  A_FAMREL.yaml  A_FNLWGT.yaml  A_HRS1.yaml  A_LINENO.yaml  A_SPOUSE.yaml  A_WKSTAT.yaml  FICA.yaml  FILESTAT.yaml  GESTFIPS.yaml  MARG_TAX.yaml  MARSUPWT.yaml  PARENT.yaml  PEARNVAL.yaml  PH_SEQ.yaml  PTOTVAL.yaml  P_SEQ.yaml  SPM_ID.yaml  STATETAX_A.yaml  STATETAX_B.yaml  TAX_ID.yaml  index.yaml
micro/us/synthesis/: validation.py
microplex/: pipeline.py
scripts/: cps_to_cosilico.py
tests/: test_calibration.py  test_download_cps.py  test_etl_ons.py  test_etl_soi_credits.py  test_etl_soi_deductions.py  test_etl_soi_income_sources.py  test_etl_soi_state.py  test_hierarchical_calibration.py  test_integration_simple.py  test_loader.py  test_standard_deduction.py  test_state_targets.py  test_supabase_client.py
tests/test_synthesis/: test_evaluation.py  test_flow.py  test_synthesizer.py  test_transforms.py
