[project]
name = "cosilico-data-sources"
version = "0.1.0"
description = "Data sources for tax-benefit microsimulation: variable mappings and calibration targets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Cosilico", email = "hello@cosilico.ai" }
]

dependencies = [
    "sqlmodel>=0.0.22",
    "pyyaml>=6.0",
    "httpx>=0.27.0",  # For fetching external data
    "numpy>=1.24.0",  # For calibration calculations
    "pandas>=2.0.0",  # For microdata handling
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
cosilico-data = "db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "micro", "calibration"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
