[project]
name = "microplex-sources"
version = "0.1.0"
description = "Data sources for microplex microsimulation: microdata, calibration targets, and country-specific pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Cosilico", email = "hello@cosilico.ai" }
]

dependencies = [
    "sqlmodel>=0.0.22",
    "supabase>=2.0.0",  # Supabase Python client
    "pyyaml>=6.0",
    "httpx>=0.27.0",  # For fetching external data
    "numpy>=1.24.0",  # For calibration calculations
    "pandas>=2.0.0",  # For microdata handling
    "scipy>=1.11.0",  # For entropy minimization optimization
    "microplex>=0.1.0",  # Synthesis and calibration algorithms
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
cosilico-data = "db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db", "micro", "calibration"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
